--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
     }
   ],
   "require": {
-    "illuminate/config": "^v5.1.1|^v6.0|^v7.0|^v8.0",
-    "illuminate/database": "^v5.1|^v6.0|^v7.0|^v8.0",
-    "illuminate/support": "^v5.1|^v6.0|^v7.0|^v8.0"
+    "illuminate/config": "^5.1|^6.0|^7.0|^8.0|^9.0",
+    "illuminate/database": "^5.1|^6.0|^7.0|^8.0|^9.0",
+    "illuminate/support": "^5.1|^6.0|^7.0|^8.0|^9.0"
   },
   "autoload": {
     "psr-4": {
